--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ editor:
     wrap: 72
 ---
 
-# CASA00025 Group Project Title Here
+# CASA00025 Mapping the Urban Heat-Greenness Nexus in Los Angeles
 
 ## Project Summary
 
